--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "298680d0-6619-46ec-b6e8-7778704a1644"
 authors = ["Marcos Pasa <marcospasa130@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+CurveFit = "5a033b19-8c74-5913-a970-47c3779ef25c"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+
 [compat]
 julia = "1"
 
