--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Marcos Pasa <marcospasa130@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
 [deps]
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 CurveFit = "5a033b19-8c74-5913-a970-47c3779ef25c"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
